# TitleTrackCpp

./: .gitignore  App.cpp  CMakeLists.txt  MainFrame.fbp  MyFrame.cpp  MyFrame.h  MyFrameDerived.cpp  MyFrameDerived.h  README.md  TitleTrackCpp.cbp  TitleTrackCpp.depend  main.cpp
.github/workflows/: build.yml  cmake.yml
gui/: MainFrame.cpp  MainFrame.h  MyFrame.cpp  MyFrame.h  TitleTrack.fbp
include/: ITitleAbstractRepository.h  SQLiteHelper.h  TitleAbstract.h  TitleAbstractDAL.h
src/: SQLiteHelper.cpp  TitleAbstractDAL.cpp  main.cpp
tests/: test_TitleAbstractDAL.cpp
